intro: show some projects

--- a/practical_info/ntds_labs.tex
+++ b/practical_info/ntds_labs.tex
@@ -232,6 +232,38 @@
 %------------------------------------------------
 
 \begin{frame}
+	\begin{figure}
+		\includegraphics[width=0.9\textwidth]{projects_2016}
+	\end{figure}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+	\begin{figure}
+		\includegraphics[width=\textwidth]{fake_news_1}
+	\end{figure}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+	\begin{figure}
+		\includegraphics[width=\textwidth]{fake_news_2}
+	\end{figure}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+	\begin{figure}
+		\includegraphics[width=\textwidth]{fake_news_3}
+	\end{figure}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
 	\frametitle{Online}
 	Moodle: {\small \url{https://moodle.epfl.ch/course/view.php?id=15299}}
 	\begin{itemize}
