final version of the assignment

--- a/assignments/01_network_properties.ipynb
+++ b/assignments/01_network_properties.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "# Resources\n",
-    "You might want to have a first look at the following resources before starting:\n",
+    "You might want to have a look at the following resources before starting:\n",
     "\n",
     "* [Twitter REST API](https://dev.twitter.com/rest/public)\n",
     "* [Tweepy Documentation](http://tweepy.readthedocs.io/en/v3.5.0/)\n",
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to collect data from Twitter you will need to generate access tokens.  In order to do this you will need to register a [client application with Twitter](https://apps.twitter.com/). Once you are done you should have your tokens. You can now create a `credentials.ini` file as follows:\n",
+    "In order to collect data from Twitter you will need to generate access tokens.  To do this you will need to register a [client application with Twitter](https://apps.twitter.com/). Once you are done you should have your tokens. You can now create a `credentials.ini` file as follows:\n",
     "```\n",
     "[twitter]\n",
     "consumer_key = YOUR-CONSUMER-KEY\n",
@@ -65,7 +65,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from pprint import pprint\n",
-    "import tweepy  # you will need to conda install tweepy first"
+    "import tweepy  # you will need to install tweepy first"
    ]
   },
   {
@@ -85,7 +85,6 @@
     "auth.set_access_token(credentials.get('twitter', 'access_token'), credentials.get('twitter', 'access_secret'))\n",
     "\n",
     "#construct API instance\n",
-    "#The API class provides access to all Twitter REST API methods\n",
     "#deal with rate limits and notify when delayed because of rate limits\n",
     "api = tweepy.API(auth,wait_on_rate_limit=True, wait_on_rate_limit_notify=True)"
    ]
@@ -103,17 +102,17 @@
    "source": [
     "In this exercise we will construct a network with the following logic:\n",
     "\n",
-    "1) We will chose a user_id in Twitter to be our first node. \n",
+    "1) We will chose a `user_id` in Twitter to be our first node. \n",
     "\n",
-    "2) We will find (some) of the users who are both following user_id and are being followed by user_id. From now on we will call such users \"connections\" of user_id. We will place these users in a list called first_nodes. \n",
+    "2) We will find (some) of the users who are both following `user_id` and are being followed by `user_id`. From now on we will call such users \"connections\" of `user_id`. We will place these user ids in a list called `first_nodes`. \n",
     "\n",
-    "3) For every node in the list first_nodes we will then find (some) of the users who are following and are being followed by this node (aka the connections of this node). The users collected in this step will be placed in a list called second_nodes.\n",
+    "3) For every node in the list `first_nodes` we will then find (some) of the users who are following and are being followed by this node (aka the connections of this node). The user ids collected in this step will be placed in a list called `second_nodes`.\n",
     "\n",
-    "4) The collection of all_nodes (aka Twitter users) that we have collected so far will be placed in a list called all_nodes.\n",
+    "4) The collection of the ids of all nodes (aka Twitter users) that we have collected so far will be placed in a list called `all_nodes`.\n",
     "\n",
-    "5) Since we have only collected a subset of all possible \"connections\" for our nodes in all_nodes we have to check if the are any remaining inner_connections that we have missed.\n",
+    "5) Since we have only collected a subset of all possible \"connections\" for our nodes we have to check if there are any remaining inner connections that we have missed.\n",
     "\n",
-    "The entire network is to be organized in a dictionary with entries that will have as key the Twitter id of the user (this is a number characterizing each user in Twitter) and as value the list of his connections.\n",
+    "The entire network is to be organized in a dictionary with entries that will have as key the Twitter id of the user (this is a number characterizing each user in Twitter) and as value the list of ids of his connections.\n",
     "\n",
     "So, let us begin. The first thing that you will have to do is to chose the node from which everything will start. I have chosen the Twitter account of [Applied Machine Learning Days](https://www.appliedmldays.org) that will take place in January 2018 in EPFL. You may change that if you wish to, but please make sure that the user you chose has both followers and friends and that he allows you to access this data."
    ]
@@ -134,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following cell write a function that takes as an argument the Twitter id of a user and returns a list with the **ids** of his connections. Take into account the case where a user does not allow you to access his data.\n",
+    "In the following cell write a function that takes as an argument the Twitter id of a user and returns a list with the **ids** of his connections. Take into account the case where a user does not allow you to access this information.\n",
     "\n",
     "**Reminder:** By connections we mean users that are both followers and friends of a given user."
    ]
@@ -170,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Collect your first_nodes and second_nodes and add your collected nodes and their connections in the dictionary called network."
+    "Collect your `first_nodes` and `second_nodes` and organize your collected nodes and their connections in the dictionary called `network`."
    ]
   },
   {
@@ -180,7 +179,7 @@
     "Hints:\n",
     "* Use `random.choice([1,3,4])` to randomly choose a number in `[1, 3, 4]`.\n",
     "* Use the `append` and `remove` methods to add and remove an element from a Python list.\n",
-    "* The `pop` method is removing the last element."
+    "* The `pop` method removes the last item in the list."
    ]
   },
   {
@@ -194,10 +193,16 @@
     "network={}\n",
     "first_nodes=[]\n",
     "second_nodes=[]\n",
-    "how_many=3#this is the number of connections you are sampling. \n",
-    "          #Keep small (e.g.3) for development, larger later (e.g. 12)\n",
-    "n=min(how_many,len(first_connections))\n",
+    "how_many=3#This is the number of connections you are sampling. \n",
+    "          #Keep small (e.g.3) for development, larger later (e.g. 10)\n",
     "#your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Be careful!** You should only keep a small value for the `how_many` parameter while you are developing your code. In order to answer to the questions you should raise the value of this parameter to `how_many=10` at least. This will take a while to execute because of the API rate limit (plan your time accordingly). You should also remember to submit your jupyter notebook with the **output shown for a large value of the `how_many` parameter**. "
    ]
   },
   {
@@ -295,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Congradulations! You now have created a dictionary that describes a real Twitter network!\n",
+    "Congradulations! You have now created a dictionary that describes a real Twitter network!\n",
     "We now want to transform this dictionary into the adjacency (or weight) matrix that you learned about in your first class. "
    ]
   },
@@ -343,7 +348,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It might happen that $W \\neq W^{T} $ for some $(i,j)$. Explain why this might me the case."
+    "**Question 1:**\n",
+    "It might happen that $W \\neq W^{T} $ for some $(i,j)$. Explain why this might be the case."
    ]
   },
   {
@@ -408,7 +414,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the maximum number of links in a network with N nodes (where N is the number of nodes in your collected network)? How many links are there in your collected network? Explain."
+    "**Question 2:**\n",
+    "What is the maximum number of links $L_{max}$ in a network with $N$ nodes (where $N$ is the number of nodes in your collected network)? How many links $L$ are there in your collected network? Comment on how $L$ and $L_{max}$ compare."
    ]
   },
   {
@@ -422,14 +429,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Degrees of the nodes"
+    "## 2.2 Degrees distribution"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot a histogram of the degree distribution. Comment on the plot. What do you observe? What would you expect from the complete Twitter network?"
+    "Plot a histogram of the degree distribution. "
    ]
   },
   {
@@ -440,8 +447,7 @@
    },
    "outputs": [],
    "source": [
-    "# Degree vector\n",
-    "d = # your code here"
+    "p = # your code here"
    ]
   },
   {
@@ -452,7 +458,14 @@
    },
    "outputs": [],
    "source": [
-    "plt.hist(d);"
+    "plt.hist(p);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 3:** Comment on the plot. What do you observe? Would you expect a similar degree disribution in the complete Twitter network?"
    ]
   },
   {
@@ -473,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the average degree of your collected network?"
+    "Calculate the average degree of your collected network."
    ]
   },
   {
@@ -484,14 +497,35 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "d_avg = # your code here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.4 Pruning the collected network"
+    "## 2.4 Diameter of the collected network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 4:** What is the diameter of the collected network? Please justify."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Your answer here:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.5 Pruning the collected network"
    ]
   },
   {
@@ -522,29 +556,6 @@
    "source": [
     "plt.spy(Wpruned, markersize=1)\n",
     "plt.title('Adjacency Matrix W');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2.5 Diameter of the collected network"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What is the diameter of the collected network? Please justify."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "**Your answer here:**"
    ]
   }
  ],
