correction of typos

--- a/assignments/01_network_properties.ipynb
+++ b/assignments/01_network_properties.ipynb
@@ -246,9 +246,9 @@
    },
    "outputs": [],
    "source": [
-    "print('There are {} first hop nodes from the source'.format(len(first_nodes)))\n",
-    "print('There are {} second hop nodes from the source'.format(len(second_nodes)))\n",
-    "print('Tere are overall {} nodes in the collected network'.format(len(all_nodes)))"
+    "print('There are {} first hop nodes'.format(len(first_nodes)))\n",
+    "print('There are {} second hop nodes'.format(len(second_nodes)))\n",
+    "print('There are overall {} nodes in the collected network'.format(len(all_nodes)))"
    ]
   },
   {
