32 bits integers are too small for tweet IDs

--- a/demos/02_data_acquisition_twitter.ipynb
+++ b/demos/02_data_acquisition_twitter.ipynb
@@ -71,11 +71,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import configparser\n",
-    "# Read the confidential token.\n",
-    "credentials = configparser.ConfigParser()\n",
-    "credentials.read('credentials.ini')\n",
-    "import tweepy  # you will need to pip install tweepy first\n",
+    "\n",
+    "import tweepy  # you will need to conda or pip install tweepy first\n",
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -85,6 +85,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read the confidential token.\n",
+    "credentials = configparser.ConfigParser()\n",
+    "credentials.read(os.path.join('..', 'credentials.ini'))\n",
+    "\n",
     "auth = tweepy.OAuthHandler(credentials.get('twitter', 'consumer_key'), credentials.get('twitter', 'consumer_secret'))\n",
     "auth.set_access_token(credentials.get('twitter', 'access_token'), credentials.get('twitter', 'access_secret'))\n",
     "\n",
@@ -180,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(tw.id[1])"
+    "tw.dtypes"
    ]
   },
   {
@@ -189,9 +193,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tw.id = tw.id.astype(int)\n",
-    "tw.likes = tw.likes.astype(int)\n",
-    "tw.shares = tw.shares.astype(int)"
+    "tw.id = tw.id.astype(np.int64)\n",
+    "tw.likes = tw.likes.astype(np.int64)\n",
+    "tw.shares = tw.shares.astype(np.int64)"
    ]
   },
   {
@@ -200,8 +204,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import display\n",
-    "display(tw[:5])"
+    "tw.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tw.head()"
    ]
   },
   {
