better description of numpy

--- a/demos/03_numpy.ipynb
+++ b/demos/03_numpy.ipynb
@@ -4,14 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab Session 2: Numpy"
+    "# Lab Session 2: Numpy\n",
+    "Hermina Petric Maretic, *PhD student*, [EPFL](http://epfl.ch) [LTS4](http://lts4.epfl.ch)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NumPy is one of the best modules to perform scientific computing in python. It's very efficient in vector and matrix computations and has very good functional support in dealing with (multidimensional) arrays."
+    "[NumPy](http://www.numpy.org) is the fundamental package for scientific computing with Python. It contains among other things:\n",
+    "* a powerful N-dimensional array object\n",
+    "* sophisticated (broadcasting) functions\n",
+    "* tools for integrating C/C++ and Fortran code\n",
+    "* useful linear algebra, Fourier transform, and random number capabilities\n",
+    "\n",
+    "Besides its obvious scientific uses, NumPy can also be used as an efficient multi-dimensional container of generic data. Arbitrary data-types can be defined. This allows NumPy to seamlessly and speedily integrate with a wide variety of databases."
    ]
   },
   {
@@ -20,9 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from numpy import random\n",
-    "from numpy import linalg"
+    "import numpy as np"
    ]
   },
   {
