Network models lab with solutions

--- a/demos/04_networkx.ipynb
+++ b/demos/04_networkx.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -49,7 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "er=nx.erdos_renyi_graph(100,0.15)"
@@ -65,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "er_adj = nx.adjacency_matrix(er,range(100))\n",
@@ -94,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "plt.spy(er_adj)"
    ]
   },
   {
@@ -123,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "er.add_node(100)"
@@ -172,7 +180,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "er.add_edge(101,102)\n",
+    "nx.draw(er)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "er.remove_nodes_from(range(50))\n",
+    "nx.draw(er)\n",
+    "er.nodes()"
    ]
   },
   {
@@ -233,7 +253,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "er=nx.erdos_renyi_graph(100,0.15)"
@@ -242,7 +264,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def poisson(mu,k):\n",
@@ -264,9 +288,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
+    "d = er.degree().values()\n",
     "plt.hist(list(d), bins = 20);\n",
-    "#your code here"
+    "mu = 2*er.size()/100;\n",
+    "k = np.linspace(1,25,25);\n",
+    "deg = [100*poisson(mu,i) for i in k]\n",
+    "plt.plot(k, deg);\n",
+    "plt.ylabel(\"Number of vertices\")\n",
+    "plt.xlabel(\"Degree\")\n",
+    "plt.title(\"Erdos Renyi degree distribution\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -291,7 +322,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "d = ba.degree().values()\n",
+    "plt.hist(list(d), bins = 20);\n",
+    "mu = 2*ba.size()/100;\n",
+    "k = np.linspace(1,45,45);\n",
+    "deg = [100*poisson(mu,i) for i in k]\n",
+    "plt.plot(k, deg);\n",
+    "plt.ylabel(\"Number of vertices\")\n",
+    "plt.xlabel(\"Degree\")\n",
+    "plt.title(\"Barabasi-Albert degree distribution\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -307,7 +347,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "d = ws.degree().values()\n",
+    "plt.hist(list(d), bins = 20);"
    ]
   },
   {
@@ -323,7 +364,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "ws_new = nx.watts_strogatz_graph(100,4,0.8)\n",
+    "d = ws_new.degree().values()\n",
+    "plt.hist(list(d), bins = 20);"
    ]
   },
   {
@@ -356,16 +399,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also create a graph on our own. This sort of manifold-based graph is often used in practice when we need a graph representation of data laying on a manifold. Generate 100 two-dimensional data points, both values between 0 and 1. These will be the coordinates of your nodes. Connect the nodes if their Euclidian distance is smaller than 0.2. In that case, the weight of the edge should be equal to $w(i,j) = \\exp \\left(-{\\frac {dist(i,j)^{2}}{2\\theta ^{2}}}\\right)$. For this experiment, set $\\theta$ to 0.9. "
+    "We can also create a graph on our own. This sort of manifold-based graph is often used in practice when we need a graph representation of data laying on a manifold. Generate 100 two-dimensional data points, both values between 0 and 1. They should come from a uniform random distribution. These will be the coordinates of your nodes. Connect the nodes if their Euclidian distance is smaller than the threshold 0.2. In that case, the weight of the edge should be equal to $w(i,j) = \\exp \\left(-{\\frac {dist(i,j)^{2}}{2\\theta ^{2}}}\\right)$. For this experiment, set $\\theta$ to 0.9. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def random_gaussian(nodes, theta, tresh):\n",
+    "def random_gaussian(nodes, theta, threshold):\n",
     "    #your code here\n",
     "    return adj"
    ]
@@ -373,7 +418,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nodes = #your code here"
@@ -392,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "adj = random_gaussian(nodes, 0.9, 0.2)"
@@ -401,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.spy(adj)"
@@ -410,7 +461,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#your code here"
@@ -424,7 +477,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
