networkx tutorial: last exercise will be part of the assignment

--- a/demos/04_networkx.ipynb
+++ b/demos/04_networkx.ipynb
@@ -380,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random manifold-based network"
+    "### Random manifold-based network (part of the assignment)"
    ]
   },
   {
