Solutions of assignment 2: Network models

--- a/assignments/02_network_models.ipynb
+++ b/assignments/02_network_models.ipynb
@@ -49,9 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('My network has {} nodes.'.format(len(G.nodes())))\n",
@@ -69,33 +67,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.1 In this part of the assignment, you have to create an Erdos-Renyi and Barabasi-Albert graph using NetworkX, and compare them to the collaboration network. Try to simulate the original network as best you can, so when choosing parameters for the networks, take into account the number of vertices and edges of the original network. The number of vertices should stay exactly the same. Comment on your choice of parameters."
+    "1.1 In this part of the assignment, you have to create an Erdos-Renyi and Barabasi-Albert graph using NetworkX, and compare them to the colaboration network. Try to simulate the original network as best you can, so when choosing parameters for the networks, take into account the number of vertices and edges of the original network. Comment on your choice of parameters."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "n = len(G.nodes())\n",
+    "m = G.size()\n",
+    "p = m*2/(n*(n-1))\n",
+    "er=nx.erdos_renyi_graph(n,p)\n",
+    "ba=nx.barabasi_albert_graph(n,3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "For the ER network, the expected number of edges is $E[m] = \\frac{pn(n-1)}{2}$.\n",
+    "For the BA network, m is fixed to $m = q*(n-q)$, where q is the model parameter. Since $q$ had to be a natural number, $q=3$ gives the best approximation."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('My Erdos Renyi network has {} nodes.'.format(len(er.nodes())))\n",
@@ -114,9 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "giant_G = max(nx.connected_component_subgraphs(G), key=len)\n",
@@ -131,21 +128,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "From the lectures, we know that in Erdos Renyi networks, the fraction of nodes in the giant component $S = \\frac{N_G}{N}$, grows with the average degree by $S = 1 - e^{-\\langle k \\rangle S}$. Therefore, as $\\langle k \\rangle = (N-1)p$:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The parameter p for an Erdos Renyi network with the same expected size of the giant component is 0.00037911157202514926.\n",
+      "The size of the component in a randomly generated network is 4127.\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here\n",
+    "S_G = len(giant_G.nodes())/n\n",
+    "p_giant = - np.log(1-S_G)/((n-1)*S_G)\n",
     "print('The parameter p for an Erdos Renyi network with the same expected size of the giant component is {}.'.format(p_giant))\n",
-    "# your code here\n",
-    "print('The size of the component in a randomly generated network with this parameter is {}.'.format(len(er_giant.nodes())))"
+    "er_giant = max(nx.connected_component_subgraphs(nx.erdos_renyi_graph(n,p_giant)), key=len)\n",
+    "print('The size of the component in a randomly generated network is {}.'.format(len(er_giant.nodes())))"
    ]
   },
   {
@@ -158,9 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nx.average_clustering(G)"
@@ -170,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans: "
+    "Yes, the Watts - Strogatz model has a very high clustering coefficient at the start, which can be decreased with a higher rewiring parameter."
    ]
   },
   {
@@ -219,7 +222,7 @@
     "        - Randomly select one stub from the list of stubs (corresponding to one of the other nodes), and connect these two nodes. In case the two chosen nodes are already connected, simply increase the weight of this edge by one. Be careful to randomly select from stubs and not from nodes, as this means the chances of selecting a node will be proportional to its target degree.\n",
     "    - When the number of edges adjacent to this node corresponds its target degree, go on to the second node in the list. \n",
     "    - Repeate this procedure until all stubs are paired up, or there is only one node left with a pair number of stubs. In that case, don't create a self-loop, but discard the stubs.\n",
-    "    \n",
+    "\n",
     "*Hint:* \n",
     " - Use nx.empty_graph() to create an empty graph\n",
     " - Use `G.add_edge(node1,node2,weight = 1)` to add edges to a weighted graph and `G.edge[node1][node2]['weight'] += 1`"
@@ -227,33 +230,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def greedy_configuration(degree_distribution):\n",
-    "    #your code\n",
+    "    N=len(degree_distribution)\n",
+    "    G=nx.empty_graph()\n",
+    "\n",
+    "    degree_distribution = sorted(degree_distribution,reverse=True)\n",
+    "    stublist=[]\n",
+    "    for node in range(len(degree_distribution)):\n",
+    "        for i in range(degree_distribution[node]):\n",
+    "            stublist.append(node) \n",
+    "    \n",
+    "    for node in range(len(degree_distribution)):\n",
+    "        for stub in range(degree_distribution[node]):\n",
+    "            del stublist[0]\n",
+    "        while(degree_distribution[node] and len(stublist) > 0):\n",
+    "            ind = np.random.randint(0,len(stublist))\n",
+    "            b = stublist.pop(ind)\n",
+    "            if G.has_edge(node,b):\n",
+    "                G.edge[node][b]['weight'] += 1\n",
+    "            else:\n",
+    "                G.add_edge(node,b,weight = 1)\n",
+    "            \n",
+    "            degree_distribution[node] = degree_distribution[node] - 1\n",
+    "            degree_distribution[b] = degree_distribution[b] - 1\n",
     "    return G"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28992\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "degree_distribution=sorted(nx.degree(G).values(),reverse=True) # degree distribution sorted from highest to lowest\n",
-    "gc = greedy_configuration(degree_distribution)"
+    "degree_sequence=sorted(nx.degree(G).values(),reverse=True) # degree sequence\n",
+    "gc = greedy_configuration(degree_sequence)"
    ]
   },
   {
@@ -265,14 +279,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "degree_sequence_gc=sorted(nx.degree(gc, weight = 'weight').values(),reverse=True) #weighted degree distribution\n",
-    "#your code here"
+    "print('My network has {} nodes.'.format(len(gc.nodes())))\n",
+    "degree_sequence_gc=sorted(nx.degree(gc, weight = 'weight').values(),reverse=True)\n",
+    "plt.plot(np.array(degree_sequence) - np.array(degree_sequence_gc));"
    ]
   },
   {
@@ -285,19 +298,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "nx.draw(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.draw(gc)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "They won't have the same adjacency matrix, because the second only shares the same degree distribution, but not the same structure."
    ]
   },
   {
@@ -311,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "No, as this graph is still random and has no real structure."
    ]
   }
  ],
