include SNAP network in data folder

--- a/assignments/02_network_models.ipynb
+++ b/assignments/02_network_models.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
+    "import os\n",
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
@@ -37,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G=nx.read_edgelist(\"ca-GrQc.txt\")"
+    "G = nx.read_edgelist(os.path.join('..', 'data', 'arxiv_collaboration_network.txt'))"
    ]
   },
   {
