--- a/assignments/02_network_models.ipynb
+++ b/assignments/02_network_models.ipynb
@@ -12,7 +12,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this assignment we will work on a network representing the collaboration between scientists in the field of General Relativity and Quantum Cosmology. You can download this network from http://snap.stanford.edu/data/ca-GrQc.html."
+    "For this assignment we will work on a network representing the collaboration between scientists in the field of General Relativity and Quantum Cosmology. The network comes from [SNAP](http://snap.stanford.edu/data/ca-GrQc.html) and is described as follows:\n",
+    "\n",
+    "> Arxiv GR-QC (General Relativity and Quantum Cosmology) collaboration network is from the e-print [arXiv](https://arxiv.org) and covers scientific collaborations between authors papers submitted to General Relativity and Quantum Cosmology category. If an author *i* co-authored a paper with author *j*, the graph contains a undirected edge from *i* to *j*. If the paper is co-authored by *k* authors this generates a completely connected (sub)graph on *k* nodes. The data covers papers in the period from January 1993 to April 2003 (124 months). It begins within a few months of the inception of the arXiv."
    ]
   },
   {
@@ -62,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.1 In this part of the assignment, you have to create an Erdos-Renyi and Barabasi-Albert graph using NetworkX, and compare them to the collaboration network. Try to simulate the original network as best you can, so when choosing parameters for the networks, take into account the number of vertices and edges of the original network. The number of vertices should stay exactly the same. Comment on your choice of parameters."
+    "1.1 In this part of the assignment, you have to create an Erdős–Rényi and Barabási-Albert graph using NetworkX, and compare them to the collaboration network. Try to simulate the original network as best as you can. When choosing parameters for the networks, take into account the number of vertices and edges of the original network. The number of vertices should be exactly the same. Comment on your choice of parameters."
    ]
   },
   {
@@ -71,14 +73,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "# Your code here."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "**Your answer here.**"
    ]
   },
   {
@@ -87,17 +89,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('My Erdos Renyi network has {} nodes.'.format(len(er.nodes())))\n",
-    "print('My Erdos Renyi network has {} edges.'.format(er.size()))\n",
-    "print('My Barabasi Albert network has {} nodes.'.format(len(ba.nodes())))\n",
-    "print('My Barabasi Albert network has {} edges.'.format(ba.size()))"
+    "print('My Erdős–Rényi network has {} nodes.'.format(len(er.nodes())))\n",
+    "print('My Erdős–Rényi network has {} edges.'.format(er.size()))\n",
+    "print('My Barabási-Albert network has {} nodes.'.format(len(ba.nodes())))\n",
+    "print('My Barabási-Albert network has {} edges.'.format(ba.size()))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.2 Check the size of the largest connected component in each graph and compare them to the original network. In Erdos Renyi model, what would need to be the probability of creating each edge in order to have the same expected size of the largest component? Explain. Try generating a graph with this parameter to check if you get a similar value."
+    "1.2 Check the size of the largest connected component in each graph and compare them to the original network. In the Erdős–Rényi model, what should the probability of creating each edge be in order to have the same expected size of the largest component? Justify. Generate a graph with this parameter to check if you indeed get a similar value."
    ]
   },
   {
@@ -118,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "**Your answer here.**"
    ]
   },
   {
@@ -127,9 +129,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "print('The parameter p for an Erdos Renyi network with the same expected size of the giant component is {}.'.format(p_giant))\n",
-    "# your code here\n",
+    "# Your code here.\n",
+    "print('The parameter p for an Erdős–Rényi network with the same expected size of the giant component is {}.'.format(p_giant))\n",
+    "\n",
+    "# Your code here.\n",
     "print('The size of the component in a randomly generated network with this parameter is {}.'.format(len(er_giant.nodes())))"
    ]
   },
@@ -153,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans: "
+    "**Your answer here.**"
    ]
   },
   {
@@ -167,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this part of the assignment, you will have to create a random network from a predefined degree distribution. There are several network models which can create a random network with the exact same degree distribution as the original, or with the same expected distribution as the original. For more information, you can check in section 4.8 of [the Barabasi book.](http://networksciencebook.com)"
+    "In this part of the assignment, you will have to create a random network from a predefined degree distribution. There are several network models which can create a random network with the exact same degree distribution as the original, or with the same expected distribution as the original. Refer to section 4.8 of [the Barabási book](http://networksciencebook.com) for more information."
    ]
   },
   {
@@ -176,36 +179,32 @@
    "source": [
     "One of the most famous ones is the configuration model. The model for a graph with $L$ edges in total is constructed in the following steps:\n",
     "\n",
-    "- Assign a degree to each node, represented as stubs (half-links). The degree sequence is either generated analytically from a preselected distribution, or it is extracted from the adjacency matrix of a real network. We must start from an even number of stubs, otherwise we are left with unpaired stubs.\n",
+    "- Assign a degree to each node, represented as stubs (half-links). The degree sequence is either generated analytically from a preselected distribution, or it is extracted from the adjacency matrix of a real network. Note that we must start from an even number of stubs to avoid being left with unpaired stubs.\n",
     "- Randomly select a stub pair and connect them. Then randomly choose another pair from the remaining $2L - 2$ stubs and connect them. This procedure is repeated until all stubs are paired up.\n",
     "\n",
-    "*Reminder:* A stub is a half-link, representing half of one edge. It containes one node and can be paired up with another stub to create an edge (between the two corresponding nodes).\n"
+    "*Reminder:* A stub is a half-link, representing the half of an edge. It contains one node and can be paired up with another stub to create an edge (between the two corresponding nodes)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.1 However, this model allows for the creation of multi-links (multiple edges between the same pair of vertices) and self-loops, thus leading to a non-simple graph. In this assignment, you will implement a greedy configuration model, to avoid these problems."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The algorithm is as follows:\n",
+    "2.1 However, this model allows for the creation of multi-links (multiple edges between the same pair of vertices) and self-loops, thus leading to a non-simple graph. In this assignment, you will implement a greedy configuration model, to avoid these problems.\n",
+    "\n",
+    "The algorithm goes as follows:\n",
     "- Extract the degree sequence from our collaboration network.\n",
     "- Assign a target degree to each node, represented as stubs or half-links. Use the degree sequence extracted from the collaboration network.\n",
     "- Sort the nodes by degree. \n",
     "    - Pick the node with the highest target degree. Delete all its stubs from the list of stubs to make sure we don't create a self loop.\n",
     "    - Until all its weighted degree equals its target degree: \n",
     "        - Randomly select one stub from the list of stubs (corresponding to one of the other nodes), and connect these two nodes. In case the two chosen nodes are already connected, simply increase the weight of this edge by one. Be careful to randomly select from stubs and not from nodes, as this means the chances of selecting a node will be proportional to its target degree.\n",
-    "    - When the number of edges adjacent to this node corresponds its target degree, go on to the second node in the list. \n",
+    "    - When the number of edges adjacent to this node corresponds to its target degree, go on to the second node in the list. \n",
     "    - Repeate this procedure until all stubs are paired up, or there is only one node left with a pair number of stubs. In that case, don't create a self-loop, but discard the stubs.\n",
     "    \n",
-    "*Hint:* \n",
-    " - Use nx.empty_graph() to create an empty graph\n",
-    " - Use `G.add_edge(node1,node2,weight = 1)` to add edges to a weighted graph and `G.edge[node1][node2]['weight'] += 1`"
+    "*Hints*: \n",
+    " - Use `nx.empty_graph()` to create an empty graph.\n",
+    " - Use `G.add_edge(node1,node2,weight = 1)` to add an edge to a weighted graph.\n",
+    " - Use `G.edge[node1][node2]['weight'] += 1` to increment the weight of an edge by one."
    ]
   },
   {
@@ -215,7 +214,7 @@
    "outputs": [],
    "source": [
     "def greedy_configuration(degree_distribution):\n",
-    "    #your code\n",
+    "    # Your code here.\n",
     "    return G"
    ]
   },
@@ -233,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.2 Check that the network has the same size and plot the differences between weighted degree distributions to check if they are same."
+    "2.2 Verify that the networks have the same number of nodes. Plot the difference between the weighted degree distributions to verify that they are identical. If not, why?"
    ]
   },
   {
@@ -243,14 +242,35 @@
    "outputs": [],
    "source": [
     "degree_sequence_gc=sorted(nx.degree(gc, weight = 'weight').values(),reverse=True) #weighted degree distribution\n",
-    "#your code here"
+    "# Your code here."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.3 Draw both this and the original network. Should these two networks have the same adjacency matrices? Does a node permutation change anything?"
+    "**Your answer here.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.3 Should these two networks have the same adjacency matrices? Justify."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Your answer here.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.4 Draw both the generated and original networks. Are they similar? If not, why? Try to explain."
    ]
   },
   {
@@ -259,28 +279,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "# Your code here."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "**Your answer here.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.4 Do you expect the properties from the first part of the assignment to stay close to the original graph? Explain."
+    "2.5 Do you expect the properties studied in the first part of the assignment to be close to the original graph? Justify."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans:"
+    "**Your answer here.**"
    ]
   }
  ],
