sol2: text edits

--- a/assignments/02_network_models.ipynb
+++ b/assignments/02_network_models.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the ER network, the expected number of edges is $E[m] = \\frac{pn(n-1)}{2}$.\n",
+    "For the ER network, the expected number of edges is $E[m] = pn(n-1)/2$.\n",
     "For the BA network, m is fixed to $m = q*(n-q)$, where q is the model parameter. Since $q$ had to be a natural number, $q=3$ gives the best approximation."
    ]
   },
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the lectures, we know that in Erdos Renyi networks, the fraction of nodes in the giant component $S = \\frac{N_G}{N}$, grows with the average degree by $S = 1 - e^{-\\langle k \\rangle S}$. Therefore, as $\\langle k \\rangle = (N-1)p$:"
+    "We know from the lectures that in Erdős–Rényi networks, the fraction of nodes in the giant component $S = \\frac{N_G}{N}$ grows with the average degree by $S = 1 - e^{-\\langle k \\rangle S}$. Therefore, as $\\langle k \\rangle = (N-1)p$:"
    ]
   },
   {
@@ -149,15 +149,16 @@
     "S_G = len(giant_G.nodes())/n\n",
     "p_giant = - np.log(1-S_G)/((n-1)*S_G)\n",
     "print('The parameter p for an Erdos Renyi network with the same expected size of the giant component is {}.'.format(p_giant))\n",
+    "\n",
     "er_giant = max(nx.connected_component_subgraphs(nx.erdos_renyi_graph(n,p_giant)), key=len)\n",
-    "print('The size of the component in a randomly generated network is {}.'.format(len(er_giant.nodes())))"
+    "print('The size of the component in a randomly generated network with this parameter is {}.'.format(len(er_giant.nodes())))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.3 Look at the clustering coefficient of the original network. Is there a network model we talked about that could have a clustering coefficient that is close? Explain."
+    "1.3 Look at the clustering coefficient of the original network. Is there a network model we talked about that could have a clustering coefficient that is close? Justify."
    ]
   },
   {
